--- a/Website/style.css
+++ b/Website/style.css
@@ -34,10 +34,9 @@ section > section{
 }
 
 .header{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url(images/CVRE.png);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;/*was fixed */
+    background-size: cover;
     background-color:black;
     height:900px;
     
